Fixing json trash icon z-index.

--- a/packages/web-services/public/assets/css/web-services.css
+++ b/packages/web-services/public/assets/css/web-services.css
@@ -257,7 +257,6 @@ ul.striped li.selected {
     margin-right: 10px;
     position: relative;
     top: 7px;
-    z-index: 99999999999999;
     cursor: pointer;
 }
 
